@startuml
package com.finekuo.byshardingsphereproxy.controller {
  class EmployeeController {
    +createEmployee(request: CreateEmployeeRequest): Employee
    -toEntity(request: CreateEmployeeRequest): Employee
  }
}

package com.finekuo.mybatisflexcore.mapper {
  interface EmployeeMapper {
    +insert(employee: Employee): int ' or Employee
  }
}

package com.finekuo.normalcore.dto.request {
  class CreateEmployeeRequest {
    +name: String
    +address: String
    +gender: Integer
    +rocId: String
    ' other fields
  }
}

package com.finekuo.mybatisflexcore.entity {
  class Employee {
    +id: Long
    +name: String
    +address: String
    +gender: Integer
    +rocId: String
    ' other fields
  }
}

com.finekuo.byshardingsphereproxy.controller.EmployeeController ..> com.finekuo.mybatisflexcore.mapper.EmployeeMapper : uses
com.finekuo.byshardingsphereproxy.controller.EmployeeController ..> com.finekuo.normalcore.dto.request.CreateEmployeeRequest : uses as parameter
com.finekuo.byshardingsphereproxy.controller.EmployeeController ..> com.finekuo.mybatisflexcore.entity.Employee : uses (creates, returns)
com.finekuo.mybatisflexcore.mapper.EmployeeMapper ..> com.finekuo.mybatisflexcore.entity.Employee : uses as parameter
@enduml
